# qcloud-sdk-py

./: .buildinfo  .coveragerc  .gitignore  CHANGELOG.md  README.html  README.md  genindex.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/: sync_from_coding_devops.yml  sync_to_coding_devops.yml
.github/workflows/: publish-jupyterbook-docs.yml  publish-to-pypi.yml
_sources/api/: cls.rst  cos.rst
_sources/dev/: release_plans.md
api/: README.html  api.html  cls.html  cos.html
depreciated/: vod.py
depreciated/ciam/: api.py
depreciated/cloudbase/: __init__.py  admin_api.py  api.py  http.py
dev/: README.html  release_plans.html
dev/base/: README.html  client.html
dev/cos/: README.html  api.html  verify.html
docs/: README.md  _config.yml  _toc.yml
docs/api/: README.md  api.rst
docs/dev/: release_plans.md
examples/: eb.py
examples/cfs_with_scf/: serverless.yml
examples/cos_with_scf/: serverless.yml
examples/eb_with_scf/: README.md  serverless.yml
examples/iotcloud/: iotcloud_example.py
examples/scf_large_file/: README.md  serverless.yml
examples/tdmq_pulsar_with_scf/: README.md  serverless.yml
qcloud_sdk/: __init__.py  api.py  base.py  config.py  cos.py  exceptions.py  models.py  settings.toml  sms.py  vod.py
qcloud_sdk/base/: __init__.py  client.py  exceptions.py  sign.py
qcloud_sdk/ciam/: api.py
qcloud_sdk/cli/: __main__.py  build.py  deploy.py
qcloud_sdk/cloudbase/: http.py
qcloud_sdk/cls/: api.py
qcloud_sdk/cos/: __init__.py  api.py  client.py  models.py  sign.py  utils.py
qcloud_sdk/eb/: api.py  models.py
qcloud_sdk/iotcloud/: api.py
qcloud_sdk/models/: events.py  (+7 more)
start/: README.html
tests/: client.py  test_base_client.py  test_base_sign.py  test_cls_api.py  test_config.py  test_cos_api.py  test_cos_api_base.py  test_cos_api_bucket.py  test_cos_api_object.py  test_cos_api_service.py  test_cos_client.py  test_cos_sign.py  test_cos_utils.py  test_eb_api.py  test_eb_models.py  test_iotcloud_api.py  test_models_events.py  test_scf_api_functions.py  test_scf_models.py  test_sms_api.py  test_tmt_api.py  test_utils_crcmod.py  test_utils_hashlib.py  utils.py
tutorials/: README.html
(+52 files in other folders)
