[metadata]
name = qcloud-sdk-py
version = 0.2.1-alpha.2
author = QuantTide Inc.
author_email = opensource@quanttide.com
license = Apache 2.0
description = 腾讯云Python服务端SDK
url = quanttide.com

[options]
packages = find:
install_requires =
    requests
    dynaconf>=3.0.0
    cloudevents

[options.packages.find]
exclude =
    tests
    examples