[metadata]
name = qcloud-sdk-py
version = 0.3.0
author = QuantTide Inc.
author_email = opensource@quanttide.com
license = Apache 2.0
description = 腾讯云Python服务端SDK
url = quanttide.com

[options]
packages = find:
install_requires =
    requests
    dynaconf>=3.0.0
    Jinja2
    cloudevents
    xmltodict

[options.packages.find]
exclude =
    tests
    tests.*
    examples
    examples.*

[options.package_data]
* = *.toml