[metadata]
name = qcloud-sdk-py
version = 0.3.5-beta.1
author = QuantTide Inc.
author_email = opensource@quanttide.com
license = Apache 2.0
description = 腾讯云Python服务端SDK
url = quanttide.com

[options]
packages = find:
# dynaconf最新版本不兼容3.6，暂不确定移除3.6版本支持的版本号
python_requires = >=3.7
install_requires =
    requests
    dynaconf>=3.0.0
    Jinja2
    cloudevents
    xmltodict
    tqdm
    crcmod

[options.packages.find]
exclude =
    tests
    tests.*
    examples
    examples.*

[options.package_data]
* = *.toml